DataSF minimal programming helpers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=rest-hello-world
 server.port=3030
+
+data-sf.base-url=https://data.sfgov.org/api
+data-sf.film-locations-endpoint=/views/yitu-d5am/rows.json
+data-sf.title-column-field-name=title
+data-sf.locations-column-field-name=locations
